<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微聊</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">世界，你好！</string>
    <string name="title_activity_chat">对话</string>
    <string name="chat_bt_speaking">按住说话</string>
    <string name="error_login">用户名或密码错误</string>
    <string name="msg_isnew">新</string>
    <string name="user_online">上线</string>
    <string name="user_offline">离线</string>
    <string name="friend_ip">192.168.1.1</string>
    <string name="friend_port">9090</string>
    <string name="user_register">用户注册</string>
    <string name="title_activity_register">注册</string>
    <string name="input_username">请输入账号(必填)</string>
    <string name="friend_username">账 号</string>
    <string name="input_password">请输入密码(必填)</string>
    <string name="countersign_password">请确认密码(必填)</string>
    <string name="input_nickname">请输入昵称(选填)</string>
    <string name="friend_nickname">昵 称</string>
    <string name="input_motto">请输入签名(选填)</string>
    <string name="input_phone">请输入手机号(选填)</string>
    <string name="input_birth">请选择出生日期(选填)</string>
    <string name="select_sex">性 别</string>
    <string name="user_phone">电话</string>
    <string name="user_boy">男</string>
    <string name="user_girl">女</string>
    <string name="region_location">所在地区:</string>
    <string name="title_activity_sliding_menu">菜单</string>
    <string name="activate_mumber">激活会员</string>
    <string name="chat_wallet">钱包</string>
    <string name="business_lobby">网上营业厅</string>
    <string name="individuality_decorate">个性装扮</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_photo">我的相册</string>
    <string name="time_night">夜间</string>
    <string name="telepbone_number">电话:</string>
    <string name="user_board">登陆</string>
    <string name="user_file">我的文件</string>
    <string name="back_forward">返回</string>
    <string name="image_head_icon">头像</string>
    <string name="navigation_search">搜索</string>
    <string name="navigation_friends">联系人</string>
    <string name="navigation_add">添加</string>
    <string name="navigation_online">在线好友</string>
    <string name="navigation_all">全部好友</string>
    <string name="chatuser_information">资料</string>
    <string name="chat_tv_more_picture">照片</string>
    <string name="chat_tv_more_camera">照相</string>
    <string name="chat_tv_more_file">文件</string>
    <string name="chat_tv_more_location">位置</string>
    <string name="canclemessage">取消</string>
    <string name="completemessage">完成</string>
    <string name="setmymessage">编辑资料</string>
    <string name="user_age">年 龄</string>
    <string name="user_motto">签 名</string>
    <string name="settheme">退出</string>
    <string name="mymessage">我的信息</string>
    <string name="myset">蓝牙传送</string>
    <string name="uploadfile">二维码扫描</string>
    <string name="mylocation">我的定位</string>
    <string name="voicerecognizer">语音识别</string>
    <string name="qqname">用户昵称</string>
    <string name="makemoney">赚钱</string>
    <string name="friendfind">搜索好友</string>
    <string name="friendcircle">人脉圈</string>
    <string name="contact">通讯录</string>
    <string name="group">群组</string>
    <string name="lifeserve">生活服务</string>
    <string name="friendlist">好友分组</string>
    <string name="servertext">您可以使用以下语音命令:</string>
    <string name="recognizer">识别</string>
    <string name="sendvoice">发送</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="allinfoes">精彩推荐</string>
    <string name="moreinfoes">更多    </string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="alltheme_superstar">明星</string>
    <string name="alltheme_science">科学</string>
    <string name="alltheme_handsome">帅哥</string>
    <string name="alltheme_news">新闻</string>
    <string name="alltheme_joke">笑话</string>
    <string name="alltheme_beauty">美女</string>
    <string name="alltheme_policy">政治</string>
    <string name="alltheme_economy">经济</string>
    <string name="alltheme_pe">体育</string>
    <string name="alltheme_katy">katy perry</string>
    <string name="alltheme_shayne">shayne ward</string>
    <string name="alltheme_themesearch">搜贴</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="title_activity_add_theme">AddThemeActivity</string>
    <string name="title_activity_photo_album">PhotoAlbumActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_show_big_pic">ShowBigPic</string>
    <string name="title_activity_recommand">RecommandActivity</string>

</resources>