<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/title_bar_bg"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:visibility="visible" >
		 <TextView
            android:id="@+id/title_bar_canclemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/canclemessage"
            android:onClick="cancelSetMessage"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/title_bar_setmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setmymessage"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/title_bar_completemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/completemessage"
            android:textColor="@color/white"
            android:onClick="completeSetMessage"
            android:textSize="18sp" />
</RelativeLayout>