<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/item_tv_friends_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        style="@style/wrap_content"
        android:id="@+id/item_rl_friends_msg"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/item_tv_friends_icon"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_toRightOf="@id/item_tv_friends_icon">

        <TextView
            android:id="@+id/item_tv_friends_ip"
            style="@style/wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/friend_ip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_tv_friends_port"
            style="@style/wrap_content"
            android:text="@string/friend_port"
            android:layout_alignLeft="@id/item_tv_friends_ip"
            android:layout_alignParentBottom="true"
            android:textSize="16sp" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/item_tv_friends_new"
        style="@style/wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/msg_tip_box"
        android:gravity="center|fill_vertical"
        android:text="@string/msg_isnew"
        android:textSize="16sp" />

</RelativeLayout>