<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et_find"
            android:background="@drawable/skin_btn_upload"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:clickable="true"
            android:focusable="true"
            android:inputType="@null"
            android:hint="搜索好友" 
            android:padding="3dp"
            android:textSize="10sp"/>
        <LinearLayout
            android:id="@+id/ll_mainserver" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_find"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >
                <ImageView
                    android:id="@+id/iv_friendcircle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/rmq" />
                <TextView
                    android:id="@+id/tv_friendcircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/friendcircle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/txl" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contact" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/qz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/group" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/shfw" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lifeserve" />
            </LinearLayout>
         </LinearLayout>
         <RelativeLayout
             android:id="@+id/main_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/title_bar_bg"
             android:layout_below="@+id/ll_mainserver"
             android:paddingLeft="5dp"
             >
             <TextView 
                android:layout_width="match_parent"
             	android:layout_height="wrap_content"
             	android:text="@string/friendlist"
             	android:textSize="10sp"
                 />
         </RelativeLayout>
         <ExpandableListView
             	android:id="@+id/main_elv" 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_below="@+id/main_bar"
             >
         </ExpandableListView>
    </RelativeLayout>
</ScrollView>